--- a/my-app/package.json
+++ b/my-app/package.json
@@ -18,6 +18,7 @@
 	"devDependencies": {
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^2.0.0",
+		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"carbon-components-svelte": "^0.77.0",
 		"eslint": "^8.28.0",
