--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,6 +21,7 @@
 		"@sveltejs/adapter-node": "^1.3.1",
 		"@sveltejs/kit": "^1.20.4",
 		"carbon-components-svelte": "^0.77.0",
+		"carbon-icons-svelte": "^12.1.0",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte": "^2.30.0",
