--- a/my-app/package.json
+++ b/my-app/package.json
@@ -35,7 +35,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"sqlite3": "^5.1.6",
+		"better-sqlite3": "^8.5.0",
 		"svelte-language-server": "^0.12.25"
 	}
 }
