--- a/my-app/package.json
+++ b/my-app/package.json
@@ -36,6 +36,7 @@
 	"type": "module",
 	"dependencies": {
 		"better-sqlite3": "^8.5.0",
+		"dotenv": "^16.3.1",
 		"svelte-language-server": "^0.12.25"
 	}
 }
