--- a/my-app/package.json
+++ b/my-app/package.json
@@ -38,6 +38,7 @@
 		"better-sqlite3": "^8.5.0",
 		"d3": "^7.9.0",
 		"dotenv": "^16.3.1",
+		"sharp": "^0.33.4",
 		"svelte-language-server": "^0.12.25"
 	}
 }
