--- a/my-app/.env
+++ b/my-app/.env
@@ -1,6 +1,8 @@
 #specify host for dist-build or it will be 0.0.0.0:3000
 HOST = 127.0.0.1
 PORT = 3333
+#required to avoid Cross-site POST form submissions are forbidden
+ORIGIN=http://127.0.0.1:3333
 
 DATABASE = "foobar.db"
 IMGDIR = "D:/Projects/HTML/Sveltekit-Tutorial/public/"
